--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <section class="top-banner">
     <section class="top-banner-1">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid top-banner-1 d-flex justify-content-between">
+            <div class="container-fluid top-banner-1 d-flex justify-content-around">
                 <div><a class="navbar-brand" href="#">
                   <img class="logo" src="Logo, Icon/Logo.png" alt="">
               </a></div>
@@ -105,6 +105,7 @@
                 <div class="card h-100 shadow casual-shoes">
                   <img src="Photos/pngegg 1.png" class="card-img-top" alt="...">
                   <div class="card-body">
+                    <br>
                     <h5 class="card-title fw-bold">Sneakers Basketball shoe</h5>
                     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                   </div>
